force-app/main/default/objects/Sales_History__c/Sales_History__c.object-meta.xml
<CustomObject>
    <label>Sales History</label>
    <nameField>
        <label>Sales History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>