force-app/main/default/objects/Sales_History__c/fields/Amount_Software_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Amount_Software_List_Price__c</fullName>
    <label>Amount (Software List Price)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>