force-app/main/default/objects/Sales_History__c/fields/Current_SE_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_SE_Full_Name__c</fullName>
    <label>Current SE: Full Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>