force-app/main/default/objects/Sales_History__c/fields/Days_Since_Last_Touch__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Touch__c</fullName>
    <label>Days Since Last Touch</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>