force-app/main/default/objects/Sales_History__c/fields/Forecast_Status__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Status__c</fullName>
    <label>Forecast Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>