force-app/main/default/objects/Sales_History__c/fields/Has_Sales_Support_Activity__c.field-meta.xml
<CustomField>
    <fullName>Has_Sales_Support_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Sales Support Activity</label>
    <type>Checkbox</type>
</CustomField>