force-app/main/default/objects/Sales_History__c/fields/Loss_Functionality_Gap_s__c.field-meta.xml
<CustomField>
    <fullName>Loss_Functionality_Gap_s__c</fullName>
    <label>Loss - Functionality Gap(s)</label>
    <type>TextArea</type>
</CustomField>