force-app/main/default/objects/Sales_History__c/fields/Loss_Notes__c.field-meta.xml
<CustomField>
    <fullName>Loss_Notes__c</fullName>
    <label>Loss Notes</label>
    <type>TextArea</type>
</CustomField>