force-app/main/default/objects/Sales_History__c/fields/Lost_to_Competition__c.field-meta.xml
<CustomField>
    <fullName>Lost_to_Competition__c</fullName>
    <label>Lost to Competition?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>