force-app/main/default/objects/Sales_History__c/fields/Lost_to_Competitor_Competitors_Name__c.field-meta.xml
<CustomField>
    <fullName>Lost_to_Competitor_Competitors_Name__c</fullName>
    <label>Lost to Competitor: Competitors Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>