force-app/main/default/objects/Sales_History__c/fields/Opportunity_Country__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Country__c</fullName>
    <label>Opportunity Country</label>
    <length>25</length>
    <type>Text</type>
</CustomField>