force-app/main/default/objects/Sales_History__c/fields/Opportunity_Location__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Location__c</fullName>
    <label>Opportunity Location</label>
    <length>25</length>
    <type>Text</type>
</CustomField>