force-app/main/default/objects/Sales_History__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <label>Opportunity Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>