force-app/main/default/objects/Sales_History__c/fields/Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type__c</fullName>
    <label>Opportunity Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>