force-app/main/default/objects/Sales_History__c/fields/Order_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Sub_Type__c</fullName>
    <label>Order Sub-Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>