force-app/main/default/objects/Sales_History__c/fields/Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Full_Name__c</fullName>
    <label>Owner: Full Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>