force-app/main/default/objects/Sales_History__c/fields/Primary_Quote_CGM__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote_CGM__c</fullName>
    <label>Primary Quote: CGM</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>