force-app/main/default/objects/Sales_History__c/fields/Primary_Quote_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote_Contract_Term__c</fullName>
    <description>Contract term in months</description>
    <label>Primary Quote: Contract Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>