force-app/main/default/objects/Sales_History__c/fields/Primary_Quote_NNARR_Total__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote_NNARR_Total__c</fullName>
    <label>Primary Quote: NNARR Total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>