force-app/main/default/objects/Sales_History__c/fields/Primary_Quote_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote_Quote_Number__c</fullName>
    <label>Primary Quote: Quote Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>