force-app/main/default/objects/Sales_History__c/fields/Primary_Quote_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote_Uplift__c</fullName>
    <label>Primary Quote: Uplift %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>