force-app/main/default/objects/Sales_History__c/fields/Probability_Override__c.field-meta.xml
<CustomField>
    <fullName>Probability_Override__c</fullName>
    <label>Probability Override</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>