force-app/main/default/objects/Sales_History__c/fields/Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost__c</fullName>
    <label>Reason Lost</label>
    <type>TextArea</type>
</CustomField>