force-app/main/default/objects/Sales_History__c/fields/Reason_Lost_Comments__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost_Comments__c</fullName>
    <label>Reason Lost Comments</label>
    <type>TextArea</type>
</CustomField>