force-app/main/default/objects/Sales_History__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>