force-app/main/default/objects/Sales_History__c/fields/Secondary_Managed_By_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Managed_By_Full_Name__c</fullName>
    <label>Secondary Managed By: Full Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>