force-app/main/default/objects/Sales_History__c/fields/TCV__c.field-meta.xml
<CustomField>
    <fullName>TCV__c</fullName>
    <label>TCV</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>