force-app/main/default/objects/Sales_History__c/fields/TCV_Hardware__c.field-meta.xml
<CustomField>
    <fullName>TCV_Hardware__c</fullName>
    <label>TCV (Hardware)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>