force-app/main/default/objects/Sales_History__c/fields/TCV_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>TCV_Maintenance__c</fullName>
    <label>TCV (Maintenance)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>