force-app/main/default/objects/Sales_History__c/fields/TCV_Maps__c.field-meta.xml
<CustomField>
    <fullName>TCV_Maps__c</fullName>
    <label>TCV (Maps)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>