force-app/main/default/objects/Sales_History__c/fields/TCV_Pro_Serve__c.field-meta.xml
<CustomField>
    <fullName>TCV_Pro_Serve__c</fullName>
    <label>TCV (Pro Serve)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>