force-app/main/default/objects/Sales_History__c/fields/TCV_Software_License__c.field-meta.xml
<CustomField>
    <fullName>TCV_Software_License__c</fullName>
    <label>TCV (Software License)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>