force-app/main/default/objects/Sales_History__c/fields/TCV_Term__c.field-meta.xml
<CustomField>
    <fullName>TCV_Term__c</fullName>
    <label>TCV (Term)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>