force-app/main/default/objects/Sales_History__c/fields/Weighted_TCV__c.field-meta.xml
<CustomField>
    <fullName>Weighted_TCV__c</fullName>
    <label>Weighted TCV</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>